Match native streamed terminal turns